--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "homepage": "https://rusmhd.github.io/HAAKHI.2", 
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -39,3 +40,4 @@
     "vite": "^5.4.2"
   }
 }
+
